[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/Barrow.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/bouncerArrow.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0333

[node name="bouncerArrow" type="Node2D"]
script = ExtResource( 2 )

[node name="ranged" type="Sprite" parent="."]
position = Vector2( -0.290671, 3.87677e-05 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 9.7093, -0.31498 )

[node name="bouncerArrow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bouncerArrow"]
position = Vector2( 10, 0 )
shape = SubResource( 1 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="bouncerArrow" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="bouncerArrow" to="." method="_on_hitbox_body_entered"]
